--- a/src/app/views/product-crud/product-crud.component.html
+++ b/src/app/views/product-crud/product-crud.component.html
@@ -1,3 +1,5 @@
-<button mat-raiser-button (click)="navigateToProductCreate()"> 
+<button mat-raised-button (click)="navigateToProductCreate()" color="primary"> 
     Novo Produto
 </button>
+
+<app-product-read></app-product-read>
